<resources>
    <string name="app_name">超星签到助手</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_user_info">爱花花</string>
    <string name="tab_text_1">我的课程</string>
    <string name="tab_text_2">我的签到</string>
    <string name="tab_text_3">我的设置</string>
    <string name="setting_common">通用</string>
    <string name="setting_check_update">检查更新</string>
    <string name="setting_help">帮助</string>
    <string name="qq">联系我们</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="cloud_sign">云签到</string>
    <string name="pass">请输入密码</string>
    <string name="tel">请输入手机号</string>
    <string name="email">请输入邮箱</string>
    <string name="submit">提交</string>
    <string name="signPlace">请输入签到定位地点</string>
</resources>
